[tool.poetry]
name = "causar"
version = "0.1.0"
description = "A high level testing framework for Disnake bots"
authors = ["Skelmis <ethan@koldfusion.xyz>"]
readme = "README.md"
repository = "https://github.com/Skelmis/Causar"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = ">=7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
